fix display overflow

--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -16,10 +16,19 @@ body {
 	color: #eee;
 	margin: 0;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 440px) {
 	body {
 		background-color: #202020;
 	}
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+}
+::-webkit-scrollbar-thumb {
+	background-color: #777;
+	border-radius: 3px;
 }
 
 button {
@@ -42,7 +51,7 @@ button:disabled {
 	padding: 0.3rem;
 	border-radius: 0.5rem;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 440px) {
 	.calculator {
 		width: 100%;
 		height: 100%;
@@ -50,12 +59,20 @@ button:disabled {
 }
 
 .displayState,
-.displayResult {
+.displayResult,
+.displayMemory {
 	margin: 0.2rem;
+	overflow-y: hidden;
+	overflow-x: overlay;
+	max-width: 18rem;
+	white-space: nowrap;
+}
+.displayState,
+.displayResult {
 	text-align: end;
 }
 .displayState {
-	height: 1em;
+	min-height: 1.3em;
 	font-size: 1rem;
 	opacity: 0.5;
 	margin-top: 1.5rem;
@@ -67,10 +84,17 @@ button:disabled {
 }
 .displayMemory {
 	margin: 0.2rem;
-	height: 1em;
+	min-height: 1.3em;
 	font-size: 1rem;
 	opacity: 0.5;
 	font-weight: normal;
+}
+@media screen and (max-width: 420px), screen and (max-height: 440px) {
+	.displayState,
+	.displayResult,
+	.displayMemory {
+		max-width: 100%;
+	}
 }
 @media screen and (max-height: 480px) {
 	.displayState {
@@ -118,7 +142,7 @@ button:disabled {
 	grid-template-rows: repeat(6, 3rem);
 	gap: 0.2em;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 440px) {
 	.btns {
 		flex-grow: 1;
 		grid-template-columns: repeat(4, 1fr);
